# AUT-CoDesign

./: .gitignore  CMakeLists.txt  README.md  keys
src/: CMakeLists.txt  decoder.c  decoder.h  defs.h  lfsr.c  lfsr.h  main.c  population.c  population.h  serial.c  serial.h  text.c  text.h
